refactor: unify clusters flux kustomization for nutanix and docker-infra
- Move flux-ks.yaml from nutanix-infra/ to clusters/ directory
- Update clusters/kustomization.yaml to include both nutanix-infra and docker-infra
- Single clusterops-clusters Flux Kustomization now manages all cluster types
- Remove separate flux-ks.yaml files from nutanix-infra and docker-infra

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/kustomization.yaml
@@ -1,4 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # Nutanix Infrastructure Clusters
   - nutanix-infra/overlays/2.17.0
+  
+  # Docker Infrastructure Clusters (CAPD + Kubemark)
+  - docker-infra
