--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/kustomization.yaml
@@ -1,7 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ndk-2.0.0.yaml
-- ndk-2.0.0-config-overrides.yaml
-- ndk-image-pull-sealed-secret.yaml
+  # ClusterResourceSet to deploy NDK secrets to workload clusters (apply first)
+  - ndk-workload-cluster-crs.yaml
+  # NDK App Deployment
+  - ndk-2.0.0.yaml
+  - ndk-2.0.0-config-overrides.yaml
+  # Sealed secret for management cluster (dm-dev-workspace)
+  - ndk-image-pull-sealed-secret.yaml
 
