Move application-catalogs to kommander-workspace and enable Kyverno on management cluster
- Created kommander-workspace directory for management cluster apps
- Moved dm-nkp-gitops-app-catalog from dm-dev-workspace to kommander-workspace
- OCIRepository now targets 'kommander' namespace for global availability
- Added Kyverno AppDeployment for management cluster (host-cluster selector)
- Updated dm-dev-workspace applications to depend on kommander-workspace catalog

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/flux-ks.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/flux-ks.yaml
@@ -8,6 +8,8 @@ spec:
     - name: clusterops-workspaces
     # Wait for clusters to be created before deploying workspace applications
     - name: clusterops-clusters
+    # Wait for application catalog to be available in kommander-workspace
+    - name: clusterops-kommander-workspace-application-catalogs
   interval: 5s
   path: ./region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications
   prune: true
