--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/application-catalogs/dm-nkp-gitops-app-catalog/dm-nkp-gitops-app-catalog-collection.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/application-catalogs/dm-nkp-gitops-app-catalog/dm-nkp-gitops-app-catalog-collection.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     catalog.nkp.nutanix.com/catalog-source-artifact: "true"
   name: dm-nkp-gitops-app-catalog-collection
-  namespace: dm-dev-workspace
+  namespace: kommander
 spec:
   interval: 6h0m0s
   ref:
@@ -15,3 +15,4 @@ spec:
   timeout: 1m0s
   url: oci://ghcr.io/deepak-muley/nkp-custom-apps-catalog/dm-nkp-gitops-app-catalog/collection
 status: {}
+
