--- a/region-usa/az1/management-cluster/workspaces/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kustomization.yaml
@@ -2,3 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./dm-dev-workspace/dm-dev-workspace.yaml
+  - ./kommander-workspace/kommander-workspace.yaml
