Fix: Use correct label selector for host cluster (kommander.d2iq.io/host)

--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/kyverno/kyverno.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/kyverno/kyverno.yaml
@@ -13,4 +13,4 @@ spec:
   # Use host cluster selector to target management cluster
   clusterSelector:
     matchLabels:
-      kommander.d2iq.io/host-cluster: "true"
+      kommander.d2iq.io/host: "true"
