Add NKP RBAC structure with 3-level access control
- Add VirtualGroups for dm-k8s-admin (super admin), dm-dev-workspace-admin, dm-dev-project-admin
- Add global-level bindings: cluster-admin + kommander-admin + dkp-kommander-admin for super admin
- Add workspace-level bindings for dm-dev-workspace-admin
- Add project-level bindings for dm-dev-project-admin
- Add create-k8s-user.sh script for creating certificate-based K8s users
- Add verify-rbac-users.sh script for testing user permissions
- Add comprehensive NKP-RBAC-GUIDE.md documentation

--- a/region-usa/az1/management-cluster/kustomization.yaml
+++ b/region-usa/az1/management-cluster/kustomization.yaml
@@ -28,3 +28,4 @@ resources:
   - workspaces/dm-dev-workspace/resourcequotas/flux-ks.yaml
   - workspaces/dm-dev-workspace/projects/flux-ks.yaml
   - workspaces/dm-dev-workspace/projects/dm-dev-project/applications/flux-ks.yaml
+  - workspaces/dm-dev-workspace/projects/dm-dev-project/rbac/flux-ks.yaml
