--- a/region-usa/az1/management-cluster/global/kustomization.yaml
+++ b/region-usa/az1/management-cluster/global/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - virtualgroups.yaml
+  # RBAC - VirtualGroups and Global Role Bindings
+  - rbac/
   # Gatekeeper Security Policies (references shared _common/policies/)
   - policies/
