--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/rbac/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/rbac/kustomization.yaml
@@ -2,3 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - dm-dev-workspace-superheros-rolebinding.yaml
+  # Workspace Admin bindings for dm-dev-workspace-admin
+  - dm-dev-workspace-admin-rolebindings.yaml
