Add NKP Insights platform app with dependencies (prometheus, cloudnative-pg)
- Add kube-prometheus-stack-34.9.3 ClusterApp for mgmt and workload clusters
- Add cloudnative-pg-1.28.0 ClusterApp for mgmt and workload clusters
- Add nkp-insights-1.7.3 ClusterApp for mgmt and workload clusters
- Update kustomization files with proper deployment order

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/platform-applications/nkp-insights/nkp-insights.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/platform-applications/nkp-insights/nkp-insights.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps.kommander.d2iq.io/v1alpha3
 kind: AppDeployment
 metadata:
-  name: kube-prometheus-stack
+  name: nkp-insights
   namespace: dm-dev-workspace
   annotations:
     kustomize.toolkit.fluxcd.io/ssa: merge
@@ -9,7 +9,7 @@ metadata:
 spec:
   appRef:
     kind: ClusterApp
-    name: kube-prometheus-stack-34.9.3
+    name: nkp-insights-1.7.3
   clusterSelector:
     matchExpressions:
       - key: kommander.d2iq.io/cluster-name
@@ -17,5 +17,4 @@ spec:
         values:
           - dm-nkp-workload-1
           - dm-nkp-workload-2
-  configOverrides:
-    name: kube-prometheus-stack-config-overrides
+
