--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 resources:
   - dm-nkp-gitops-catalog-applications
   - nkp-nutanix-products-catalog-applications
-  # DISABLED: platform-applications (all apps disabled - kube-prometheus-stack, rook-ceph, rook-ceph-cluster)
-  # - platform-applications
+  # Platform applications for workload clusters (nkp-insights enabled)
+  - platform-applications
