--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/nutanix-infra/sealed-secrets/dm-dev-common-sealed-secrets.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/nutanix-infra/sealed-secrets/dm-dev-common-sealed-secrets.yaml
@@ -1,8 +1,10 @@
+# Common Sealed Secrets for all dev clusters
+# These secrets are shared across all dev clusters since they use the same infrastructure
 ---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
-  name: dm-nkp-workload-1-pc-credentials
+  name: dm-dev-pc-credentials
   namespace: dm-dev-workspace
 spec:
   encryptedData:
@@ -11,16 +13,16 @@ spec:
     metadata:
       labels:
         cluster.x-k8s.io/provider: nutanix
-        konvoy.d2iq.io/cluster-name: dm-nkp-workload-1
         konvoy.d2iq.io/provider: nutanix
-      name: dm-nkp-workload-1-pc-credentials
+        konvoy.d2iq.io/environment: dev
+      name: dm-dev-pc-credentials
       namespace: dm-dev-workspace
     type: Opaque
 ---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
-  name: dm-nkp-workload-1-pc-credentials-for-csi
+  name: dm-dev-pc-credentials-for-csi
   namespace: dm-dev-workspace
 spec:
   encryptedData:
@@ -29,16 +31,16 @@ spec:
     metadata:
       labels:
         cluster.x-k8s.io/provider: nutanix
-        konvoy.d2iq.io/cluster-name: dm-nkp-workload-1
         konvoy.d2iq.io/provider: nutanix
-      name: dm-nkp-workload-1-pc-credentials-for-csi
+        konvoy.d2iq.io/environment: dev
+      name: dm-dev-pc-credentials-for-csi
       namespace: dm-dev-workspace
     type: Opaque
 ---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
-  name: dm-nkp-workload-1-pc-credentials-for-konnector-agent
+  name: dm-dev-pc-credentials-for-konnector-agent
   namespace: dm-dev-workspace
 spec:
   encryptedData:
@@ -48,16 +50,16 @@ spec:
     metadata:
       labels:
         cluster.x-k8s.io/provider: nutanix
-        konvoy.d2iq.io/cluster-name: dm-nkp-workload-1
         konvoy.d2iq.io/provider: nutanix
-      name: dm-nkp-workload-1-pc-credentials-for-konnector-agent
+        konvoy.d2iq.io/environment: dev
+      name: dm-dev-pc-credentials-for-konnector-agent
       namespace: dm-dev-workspace
     type: Opaque
 ---
 apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
-  name: dm-nkp-workload-1-image-registry-credentials
+  name: dm-dev-image-registry-credentials
   namespace: dm-dev-workspace
 spec:
   encryptedData:
@@ -66,8 +68,8 @@ spec:
   template:
     metadata:
       labels:
-        cluster.x-k8s.io/cluster-name: dm-nkp-workload-1
         clusterctl.cluster.x-k8s.io/move: ""
-      name: dm-nkp-workload-1-image-registry-credentials
+        konvoy.d2iq.io/environment: dev
+      name: dm-dev-image-registry-credentials
       namespace: dm-dev-workspace
     type: Opaque
