--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/nutanix-infra/sealed-secrets/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/nutanix-infra/sealed-secrets/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - dm-nkp-workload-1-sealed-secrets.yaml
-  - dm-nkp-workload-2-sealed-secrets.yaml
+  # Common sealed secrets shared by all dev clusters
+  - dm-dev-common-sealed-secrets.yaml
 
