Add kro and kubescape-operator applications to kommander-workspace and dm-dev-workspace
- Added kro (0.7.1) application to both workspaces
- Added kubescape-operator (1.29.12) application to kommander-workspace
- Organized applications under dm-nkp-gitops-catalog-applications folder
- kro targets management cluster in kommander-workspace
- kro targets all workload clusters in dm-dev-workspace

--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/kommander-workspace.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/kommander-workspace.yaml
@@ -7,10 +7,10 @@ kind: Workspace
 metadata:
   name: kommander-workspace
   annotations:
+    kommander.mesosphere.io/display-name: "Management Cluster Workspace"
     workspace.kommander.mesosphere.io/allow-existing-namespace: "true"
   labels:
     caren.nutanix.com/namespace-sync: ""
 spec:
   namespaceName: kommander
 status: {}
-
