--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/clusters/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Nutanix Infrastructure Clusters
-  - nutanix-infra/overlays/2.17.0
+  - nutanix-infra/overlays/dev
 
   # Docker Infrastructure Clusters (CAPD + Kubemark)
   - docker-infra
