Enable Kyverno policies alongside Gatekeeper
- Uncomment Kyverno kustomization in global policies
- Both Gatekeeper and Kyverno can run together for comprehensive policy enforcement

--- a/region-usa/az1/management-cluster/global/policies/kustomization.yaml
+++ b/region-usa/az1/management-cluster/global/policies/kustomization.yaml
@@ -10,6 +10,6 @@ resources:
   # Gatekeeper policies (OPA-based)
   - flux-ks-gatekeeper.yaml
   # Kyverno policies (Kubernetes-native)
-  # Uncomment to use Kyverno instead of or alongside Gatekeeper
-  # - flux-ks-kyverno.yaml
+  # Note: Both Gatekeeper and Kyverno can run together
+  - flux-ks-kyverno.yaml
 
