Disable COSI driver and enable Rook-Ceph
- Disable cosi-driver-nutanix (folder kept in repo for future use)
- Enable rook-ceph and rook-ceph-cluster for block and object storage
- Rook-Ceph will provide storage backend for applications

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/platform-applications/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/platform-applications/kustomization.yaml
@@ -5,11 +5,10 @@ resources:
   - kube-prometheus-stack
   - cloudnative-pg
   - harbor
-  # COSI driver (required for ObjectBucketClaim CRD - needed by project-grafana-loki)
-  - cosi-driver-nutanix
+  # DISABLED: COSI driver (kept in repo but not deployed - using Rook-Ceph instead)
+  # - cosi-driver-nutanix
   # NKP Insights (depends on prometheus and cloudnative-pg)
   - nkp-insights
-  # DISABLED: rook-ceph
-  # - rook-ceph
-  # DISABLED: rook-ceph-cluster
-  # - rook-ceph-cluster
+  # Rook-Ceph for block and object storage
+  - rook-ceph
+  - rook-ceph-cluster
