--- a/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/platform-applications/harbor/harbor.yaml
+++ b/region-usa/az1/management-cluster/workspaces/kommander-workspace/applications/platform-applications/harbor/harbor.yaml
@@ -3,7 +3,7 @@ kind: AppDeployment
 metadata:
   creationTimestamp: null
   name: harbor
-  namespace: dm-dev-workspace
+  namespace: kommander
   annotations:
     kustomize.toolkit.fluxcd.io/ssa: merge
     kustomize.toolkit.fluxcd.io/prune: disabled
@@ -11,9 +11,8 @@ spec:
   appRef:
     kind: ClusterApp
     name: harbor-1.18.0
+  # Use host cluster selector to target management cluster
   clusterSelector:
-    matchExpressions:
-      - key: kommander.d2iq.io/cluster-name
-        operator: In
-        values:
-          - dm-nkp-workload-1
+    matchLabels:
+      kommander.d2iq.io/host: "true"
+
