Remove Harbor from workload clusters and add k8s-user.sh script
- Remove Harbor from dm-dev-workspace (workload clusters)
- Keep Harbor only on management cluster (kommander-workspace)
- Remove COSI driver from dm-dev-workspace (using Rook-Ceph instead)
- Add new k8s-user.sh script with named parameters for user management
  - Supports create, delete, get/export kubeconfig commands
  - Added --kubeconfig and --key-dir options for flexibility

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/platform-applications/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/platform-applications/kustomization.yaml
@@ -4,10 +4,12 @@ resources:
   # Dependencies for nkp-insights (deploy these first)
   - kube-prometheus-stack
   - cloudnative-pg
+  # harbor (depends on cloudnative-pg)
+  # - harbor
   # DISABLED: COSI driver (kept in repo but not deployed - using Rook-Ceph instead)
   # - cosi-driver-nutanix
   # NKP Insights (depends on prometheus and cloudnative-pg)
   - nkp-insights
-  # Rook-Ceph for block and object storage
-  - rook-ceph
-  - rook-ceph-cluster
+  # # Rook-Ceph for block and object storage
+  # - rook-ceph
+  # - rook-ceph-cluster
