fix: add missing kustomization.yaml for dm-nkp-gitops-catalog-applications in project applications

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/projects/dm-dev-project/applications/platform-applications/project-grafana-loki/project-grafana-loki.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/projects/dm-dev-project/applications/platform-applications/project-grafana-loki/project-grafana-loki.yaml
@@ -1,19 +1,10 @@
 apiVersion: apps.kommander.d2iq.io/v1alpha3
 kind: AppDeployment
 metadata:
+  creationTimestamp: null
   name: project-grafana-loki
   namespace: dm-dev-project
 spec:
   appRef:
     kind: ClusterApp
     name: project-grafana-loki-0.80.5
-  clusterConfigOverrides:
-    - appVersion: 0.80.5
-      clusterSelector:
-        matchExpressions:
-          - key: kommander.d2iq.io/cluster-name
-            operator: In
-            values:
-              - host-cluster
-      configMapName: project-grafana-loki-overrides
-
