--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/projects/dm-dev-project/applications/dm-nkp-gitops-catalog-applications/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/projects/dm-dev-project/applications/dm-nkp-gitops-catalog-applications/kustomization.yaml
@@ -1,5 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - platform-applications
-  - dm-nkp-gitops-catalog-applications
+  # Applications from dm-nkp-gitops-app-catalog
+  - podinfo
