Add enforced policies to block anonymous/unauthenticated from cluster-admin
- Add Gatekeeper ConstraintTemplate and Constraint to block system:anonymous and system:unauthenticated from cluster-admin
- Add Kyverno ClusterPolicy to enforce the same restriction
- Both policies use deny/enforce action (not warn) to prevent this critical security risk
- Update kustomization files to include new policies

--- a/region-usa/az1/_common/policies/gatekeeper/constraint-templates/rbac/kustomization.yaml
+++ b/region-usa/az1/_common/policies/gatekeeper/constraint-templates/rbac/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - block-default-sa.yaml
   - block-wildcard-rbac.yaml
   - block-cluster-admin.yaml
+  - block-anonymous-cluster-admin.yaml
   - block-automount-sa-token.yaml
 
