--- a/region-usa/az1/_common/policies/gatekeeper/constraints/rbac/kustomization.yaml
+++ b/region-usa/az1/_common/policies/gatekeeper/constraints/rbac/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - block-default-sa.yaml
   - block-wildcard-rbac.yaml
   - block-cluster-admin.yaml
+  - block-anonymous-cluster-admin.yaml
   # Uncomment for stricter SA token management
   # - block-automount-sa-token.yaml
 
