Add Kyverno RBAC for generate rules and reorganize workload cluster infrastructure
- Add Kyverno background controller RBAC for management cluster
- Reorganize Kyverno structure: move rbac/ under kyverno/ folder
- Enable Gatekeeper and Kyverno policies for all workload clusters
- Consolidate Kyverno Flux Kustomization (RBAC + policies in one)
- Clean up commented code from kustomization files
- Update bootstrap files for both workload clusters

--- a/region-usa/az1/management-cluster/global/rbac/kustomization.yaml
+++ b/region-usa/az1/management-cluster/global/rbac/kustomization.yaml
@@ -5,4 +5,6 @@ resources:
   - virtualgroups.yaml
   # Global-level role bindings
   - global-admin-rolebinding.yaml
+  # Kyverno background controller RBAC (for generate rules)
+  - kyverno-background-controller-rbac.yaml
 
