--- a/region-usa/az1/workload-clusters/_base/infrastructure/kustomization.yaml
+++ b/region-usa/az1/workload-clusters/_base/infrastructure/kustomization.yaml
@@ -4,12 +4,5 @@ kind: Kustomization
 # Clusters can reference these as bases and apply overlays
 resources:
   - sealed-secrets-controller/
-  # Gatekeeper policies (if Gatekeeper is installed)
-  # - gatekeeper/
-  # Kyverno policies (if Kyverno is installed)
-  # - kyverno/
-# Example resources to add:
-#   - cert-manager/
-#   - ingress-nginx/
-#   - external-secrets/
-
+  - gatekeeper/
+  - kyverno/
