--- a/region-usa/az1/workload-clusters/dm-nkp-workload-1/bootstrap.yaml
+++ b/region-usa/az1/workload-clusters/dm-nkp-workload-1/bootstrap.yaml
@@ -72,6 +72,7 @@ spec:
   timeout: 5m
   wait: true
 ---
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -118,6 +119,25 @@ spec:
   interval: 5m
   # References shared constraints
   path: ./region-usa/az1/_common/policies/gatekeeper/constraints
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: dm-nkp-gitops-infra
+    namespace: dm-nkp-gitops-workload
+  timeout: 2m
+---
+# Stage 3c: Kyverno Configuration (policies + RBAC)
+# Applies shared Kyverno policies and RBAC from _base/infrastructure/kyverno
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: kyverno
+  namespace: dm-nkp-gitops-workload
+spec:
+  dependsOn:
+    - name: infrastructure-controllers
+  interval: 5m
+  path: ./region-usa/az1/workload-clusters/_base/infrastructure/kyverno
   prune: true
   sourceRef:
     kind: GitRepository
