Consolidate Gatekeeper and Kyverno Flux Kustomizations to dm-nkp-gitops-infra namespace
- Move Gatekeeper policies from kommander-flux to dm-nkp-gitops-infra namespace
- Move Kyverno policies from kommander-flux to dm-nkp-gitops-infra namespace
- Update names to follow clusterops-* naming convention:
  - gatekeeper-constraint-templates -> clusterops-gatekeeper-constraint-templates
  - gatekeeper-constraints -> clusterops-gatekeeper-constraints
  - kyverno-policies -> clusterops-kyverno-policies
- Update dependsOn namespace references
- All main GitOps Flux Kustomizations now consolidated in dm-nkp-gitops-infra namespace

--- a/region-usa/az1/management-cluster/global/policies/flux-ks-gatekeeper.yaml
+++ b/region-usa/az1/management-cluster/global/policies/flux-ks-gatekeeper.yaml
@@ -4,8 +4,8 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: gatekeeper-constraint-templates
-  namespace: kommander-flux
+  name: clusterops-gatekeeper-constraint-templates
+  namespace: dm-nkp-gitops-infra
 spec:
   interval: 5m
   # Path to shared constraint templates
@@ -20,8 +20,8 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: gatekeeper-constraints
-  namespace: kommander-flux
+  name: clusterops-gatekeeper-constraints
+  namespace: dm-nkp-gitops-infra
 spec:
   interval: 5m
   # Path to shared constraints
@@ -33,7 +33,6 @@ spec:
     namespace: kommander
   # Wait for templates to be ready
   dependsOn:
-    - name: gatekeeper-constraint-templates
-      namespace: kommander-flux
+    - name: clusterops-gatekeeper-constraint-templates
+      namespace: dm-nkp-gitops-infra
   timeout: 2m
-
