--- a/region-usa/az1/management-cluster/global/policies/flux-ks-kyverno.yaml
+++ b/region-usa/az1/management-cluster/global/policies/flux-ks-kyverno.yaml
@@ -8,8 +8,8 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kyverno-policies
-  namespace: kommander-flux
+  name: clusterops-kyverno-policies
+  namespace: dm-nkp-gitops-infra
 spec:
   interval: 5m
   # Path to shared Kyverno policies
@@ -19,11 +19,6 @@ spec:
     kind: GitRepository
     name: gitops-usa-az1
     namespace: kommander
-  # Wait for Kyverno to be installed
-  # Uncomment when Kyverno is deployed
-  # dependsOn:
-  #   - name: kyverno
-  #     namespace: kommander-flux
   timeout: 2m
   # Health checks for policies
   healthChecks:
