--- a/region-usa/az1/_common/policies/kyverno/rbac/block-anonymous-cluster-admin.yaml
+++ b/region-usa/az1/_common/policies/kyverno/rbac/block-anonymous-cluster-admin.yaml
@@ -39,20 +39,20 @@ spec:
               conditions:
                 all:
                   - key: "{{ request.object.roleRef.name }}"
-                    operator: Equals
+                    operator: Equal
                     value: cluster-admin
                   - any:
                       - all:
                           - key: "{{ element.kind }}"
-                            operator: Equals
+                            operator: Equal
                             value: User
                           - key: "{{ element.name }}"
-                            operator: Equals
+                            operator: Equal
                             value: system:anonymous
                       - all:
                           - key: "{{ element.kind }}"
-                            operator: Equals
+                            operator: Equal
                             value: Group
                           - key: "{{ element.name }}"
-                            operator: Equals
+                            operator: Equal
                             value: system:unauthenticated
