--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/dm-nkp-gitops-catalog-applications/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/dm-nkp-gitops-catalog-applications/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Applications from dm-nkp-gitops-app-catalog
-  - podinfo
+  # - podinfo  # Commented out - directory not present
   - kyverno
   - vault
   - kubescape-operator
