Fix Kyverno policy: use 'Equals' operator to match other policies
- Change operator from 'Equal' to 'Equals' (with 's') to match other Kyverno policies
- This should resolve the operator validation error
- Note: Old 'kyverno-policies' kustomization in 'kommander-flux' namespace needs manual deletion

--- a/region-usa/az1/_common/policies/kyverno/rbac/block-anonymous-cluster-admin.yaml
+++ b/region-usa/az1/_common/policies/kyverno/rbac/block-anonymous-cluster-admin.yaml
@@ -39,20 +39,20 @@ spec:
               conditions:
                 all:
                   - key: "{{ request.object.roleRef.name }}"
-                    operator: Equal
+                    operator: Equals
                     value: cluster-admin
                   - any:
                       - all:
                           - key: "{{ element.kind }}"
-                            operator: Equal
+                            operator: Equals
                             value: User
                           - key: "{{ element.name }}"
-                            operator: Equal
+                            operator: Equals
                             value: system:anonymous
                       - all:
                           - key: "{{ element.kind }}"
-                            operator: Equal
+                            operator: Equals
                             value: Group
                           - key: "{{ element.name }}"
-                            operator: Equal
+                            operator: Equals
                             value: system:unauthenticated
