Fix add-pdb-for-ha-deployments: exclude kyverno namespace
- Add kyverno namespace to exclude list in generate rule
- Prevents policy from trying to generate PDBs for Kyverno's own deployments
- This should resolve the RBAC permission error for kyverno-background-controller

--- a/region-usa/az1/_common/policies/kyverno/resource-management/require-pod-disruption-budget.yaml
+++ b/region-usa/az1/_common/policies/kyverno/resource-management/require-pod-disruption-budget.yaml
@@ -91,6 +91,7 @@ spec:
                 - capi-system
                 - capi-kubeadm-bootstrap-system
                 - capi-kubeadm-control-plane-system
+                - kyverno
       preconditions:
         all:
           - key: "{{ request.object.spec.replicas || `1` }}"
