Fix clusterops-kyverno-policies creation and add script to remove old kustomization
- Remove health checks from flux-ks-kyverno.yaml (policies may not exist initially)
- Add script to forcefully remove old kyverno-policies kustomization from kommander-flux
- Script suspends, adds finalizer, and deletes the old kustomization
- This should allow clusterops-kyverno-policies to be created properly

--- a/region-usa/az1/management-cluster/global/policies/flux-ks-kyverno.yaml
+++ b/region-usa/az1/management-cluster/global/policies/flux-ks-kyverno.yaml
@@ -20,12 +20,6 @@ spec:
     name: gitops-usa-az1
     namespace: kommander
   timeout: 2m
-  # Health checks for policies
-  healthChecks:
-    - apiVersion: kyverno.io/v1
-      kind: ClusterPolicy
-      name: disallow-privileged-containers
-    - apiVersion: kyverno.io/v1
-      kind: ClusterPolicy
-      name: require-requests-limits
+  # Health checks removed - policies may not exist initially
+  # Health checks can be added back once policies are stable
 
