Restructure Kyverno policy: split foreach to avoid nested all/any
- Split into two separate foreach entries instead of nesting all inside any
- First foreach: checks for User + system:anonymous
- Second foreach: checks for Group + system:unauthenticated
- This avoids the nested structure that was causing validation errors
- The error was pointing to any[1] which no longer exists with this structure

--- a/region-usa/az1/_common/policies/kyverno/rbac/block-anonymous-cluster-admin.yaml
+++ b/region-usa/az1/_common/policies/kyverno/rbac/block-anonymous-cluster-admin.yaml
@@ -41,18 +41,22 @@ spec:
                   - key: "{{ request.object.roleRef.name }}"
                     operator: Equal
                     value: cluster-admin
-                  - any:
-                      - all:
-                          - key: "{{ element.kind }}"
-                            operator: Equal
-                            value: User
-                          - key: "{{ element.name }}"
-                            operator: Equal
-                            value: system:anonymous
-                      - all:
-                          - key: "{{ element.kind }}"
-                            operator: Equal
-                            value: Group
-                          - key: "{{ element.name }}"
-                            operator: Equal
-                            value: system:unauthenticated
+                  - key: "{{ element.kind }}"
+                    operator: Equal
+                    value: User
+                  - key: "{{ element.name }}"
+                    operator: Equal
+                    value: system:anonymous
+          - list: "request.object.subjects[]"
+            deny:
+              conditions:
+                all:
+                  - key: "{{ request.object.roleRef.name }}"
+                    operator: Equal
+                    value: cluster-admin
+                  - key: "{{ element.kind }}"
+                    operator: Equal
+                    value: Group
+                  - key: "{{ element.name }}"
+                    operator: Equal
+                    value: system:unauthenticated
