feat: add KubeSec best practices documentation and update compliant example
- Add comprehensive KUBESEC-BEST-PRACTICES.md documentation explaining security rationale
- Update compliant-example.yaml to use high UID/GID (10001) for improved KubeSec score
- Add require-high-uid and require-host-users-false Kyverno policies
- Document security rationale for high UID/GID, hostUsers, and other best practices
- Update README files to reference new documentation
- Improve KubeSec score from 13 to 15 points

--- a/region-usa/az1/_common/policies/kyverno/pod-security/kustomization.yaml
+++ b/region-usa/az1/_common/policies/kyverno/pod-security/kustomization.yaml
@@ -33,3 +33,9 @@ resources:
   - require-readonly-rootfs.yaml
   # Restrict volume types to safe list
   - restrict-volume-types.yaml
+
+  # === BEST PRACTICES (KubeSec recommendations) ===
+  # Require high UID/GID (>10000)
+  - require-high-uid.yaml
+  # Require hostUsers: false (user namespace isolation)
+  - require-host-users-false.yaml
