Add NDK and NAI image pull secrets with configMapGenerator
- Separated SealedSecrets into individual files (ndk-image-pull-secret.yaml, nai-image-pull-secret.yaml)
- Created separate namespace files (ndk-namespace.yaml, nai-namespace.yaml)
- Updated ClusterResourceSet to use configMapGenerator for automatic ConfigMap generation
- Added generate-ndk-sealed-secrets and generate-nai-sealed-secrets commands to sealed-secrets.sh
- Renamed generate-sealed-secrets to generate-cluster-sealed-secrets for clarity
- Generated sealed secrets for NDK and NAI with cluster-wide scope

--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/ndk/kustomization.yaml
@@ -1,8 +1,25 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # SealedSecret for NDK image pull credentials (applied to management cluster)
+  - ndk-image-pull-secret.yaml
   # ClusterResourceSet to deploy NDK secrets to workload clusters (apply first)
   - ndk-workload-cluster-crs.yaml
   # NDK App Deployment
   - ndk.yaml
   - ndk-config-overrides.yaml
+
+# Generate ConfigMap for ClusterResourceSet from separate files
+configMapGenerator:
+  - name: ndk-image-pull-secret-resources
+    namespace: dm-dev-workspace
+    options:
+      disableNameSuffixHash: true
+      labels:
+        app.kubernetes.io/part-of: ndk
+        app.kubernetes.io/component: cluster-resource-set
+    files:
+      # Namespace YAML for workload clusters
+      - namespace.yaml=ndk-namespace.yaml
+      # SealedSecret YAML for workload clusters
+      - sealed-secret.yaml=ndk-image-pull-secret.yaml
