--- a/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/nutanix-ai/kustomization.yaml
+++ b/region-usa/az1/management-cluster/workspaces/dm-dev-workspace/applications/nkp-nutanix-products-catalog-applications/nutanix-ai/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  # SealedSecret for NAI image pull credentials (applied to management cluster)
+  - nai-image-pull-secret.yaml
   # ClusterResourceSet to deploy NAI secrets to workload clusters (apply first)
   - nai-workload-cluster-crs.yaml
   # NAI App Deployment
@@ -8,3 +10,18 @@ resources:
   - nutanix-ai-config-overrides.yaml
   # Sealed secret for management cluster (dm-dev-workspace)
   - nutanix-ai-image-pull-sealed-secret.yaml
+
+# Generate ConfigMap for ClusterResourceSet from separate files
+configMapGenerator:
+  - name: nai-image-pull-secret-resources
+    namespace: dm-dev-workspace
+    options:
+      disableNameSuffixHash: true
+      labels:
+        app.kubernetes.io/part-of: nutanix-ai
+        app.kubernetes.io/component: cluster-resource-set
+    files:
+      # Namespace YAML for workload clusters
+      - namespace.yaml=nai-namespace.yaml
+      # SealedSecret YAML for workload clusters
+      - sealed-secret.yaml=nai-image-pull-secret.yaml
